
# PRJ (DataModel
#     DEPENDS
# )

add_subdirectory (BaseEvent)
add_subdirectory (EDMUtil)

add_subdirectory (Dict)

add_subdirectory (Context)

add_subdirectory (EvtNavigator)
#
add_subdirectory (GenEvent)
add_subdirectory (SimEvent)
add_subdirectory (ElecEvent)
add_subdirectory (ElecTruth)
add_subdirectory (CalibEvent)
add_subdirectory (ClusterInfo)
add_subdirectory (RecEvent)
add_subdirectory (OecEvent)
#
#add_subdirectory (PhyEvent)

add_subdirectory (TestEvent)

# RawEvent
add_subdirectory (RawEvent)
