



add_subdirectory(RecTools)
add_subdirectory(Clusterization)
add_subdirectory(COTIWaveRec)
add_subdirectory(Deconvolution)
add_subdirectory(OECWFrec)
add_subdirectory(IntegralPmtRec)
add_subdirectory(MuonWaveRec)
add_subdirectory(OMILREC)
add_subdirectory(PmtRec)
add_subdirectory(PushAndPull)
add_subdirectory(QCtrRecAlg)

add_subdirectory(RecTimeLikeAlg)
add_subdirectory(TemplateFitAlg)
add_subdirectory(TimeRec)
add_subdirectory(TTCalib)
add_subdirectory(TTTracking)
add_subdirectory(WaveFitAlg)

add_subdirectory(BDTE)

# All the Muon Related algorithms and tools 
add_subdirectory(RecMuon)

add_subdirectory(PSDTools)

add_subdirectory(TopSteering)
